--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-modal": "^13.0.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.1",
-    "react-native-screens": "^3.20.0"
+    "react-native-screens": "^3.20.0",
+    "react-redux": "^8.0.5",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
