--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -20,6 +21,8 @@
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "^3.1.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
