=> implement feedback screen ui

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.71.6",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.1.0",
     "react-native-render-html": "^6.3.4",
