--- a/ios/Braincal/Info.plist
+++ b/ios/Braincal/Info.plist
@@ -37,6 +37,14 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+  <key>UIAppFonts</key>
+  <array>
+    <string>Inter-Medium.ttf</string>
+    <string>Inter-Light.ttf</string>
+    <string>Inter-Bold.ttf</string>
+    <string>Inter-SemiBold.ttf</string>
+    <string>Inter-Regular.ttf</string>
+  </array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
