--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
+    "lottie-react-native": "^5.1.5",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-confirmation-code-field": "^7.3.1",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
@@ -28,7 +31,8 @@
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-redux": "^8.0.5",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "rn-country-picker": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
