--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^1.4.0",
     "lottie-react-native": "^5.1.5",
     "react": "18.2.0",
@@ -31,6 +32,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-redux": "^8.0.5",
     "redux-thunk": "^2.4.2",
     "rn-country-picker": "^1.0.1"
