--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,6 +23,11 @@ end
 
 target 'Braincal' do
   config = use_native_modules!
+  pod 'Firebase', :modular_headers => true
+  pod 'FirebaseCoreInternal', :modular_headers => true
+  pod 'GoogleUtilities', :modular_headers => true
+  pod 'FirebaseCore', :modular_headers => true
+  pod 'react-native-fbsdk-next', :path => '../node_modules/react-native-fbsdk-next'
 
   # Flags change depending on the env values.
   flags = get_default_flags()
