--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-firebase/app": "^17.5.0",
+    "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -18,15 +21,18 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^1.4.0",
+    "jwt-decode": "^3.1.2",
     "lottie-react-native": "^5.1.5",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-element-dropdown": "^2.9.0",
+    "react-native-fbsdk-next": "^11.2.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "^6.2.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-render-html": "^6.3.4",
     "react-native-responsive-screen": "^1.4.2",
