--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "react-native-element-dropdown": "^2.9.0",
     "react-native-fbsdk-next": "^11.2.1",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-iap": "^12.10.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-localize": "^3.0.0",
     "react-native-modal": "^13.0.1",
+    "react-native-otp-verify": "^1.1.4",
     "react-native-pager-view": "^6.2.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-render-html": "^6.3.4",
@@ -39,6 +42,8 @@
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-toast-message": "^2.1.6",
     "react-redux": "^8.0.5",
     "redux-thunk": "^2.4.2",
     "rn-country-picker": "^1.0.1"
