--- a/ios/Braincal/Info.plist
+++ b/ios/Braincal/Info.plist
@@ -66,6 +66,10 @@
 			</dict>
 		</dict>
 	</dict>
+  <key>NSAppTransportSecurity</key>
+   <dict>
+        <key>NSAllowsArbitraryLoads</key><true/>
+   </dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>UIAppFonts</key>
