--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lottie-react-native": "^5.1.5",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-background-timer": "^2.4.1",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-element-dropdown": "^2.9.0",
