--- a/ios/Podfile
+++ b/ios/Podfile
@@ -50,16 +50,16 @@ target 'Braincal' do
     # Pods for testing
   end
 
-  post_install do |installer|
-    react_native_post_install(
-      installer,
-      # Set `mac_catalyst_enabled` to `true` in order to apply patches
-      # necessary for Mac Catalyst builds
-      :mac_catalyst_enabled => false
-    )
-    installer.pods_project.build_configurations.each do |config|
-        config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
-      end
-    __apply_Xcode_12_5_M1_post_install_workaround(installer)
-  end
+#  post_install do |installer|
+#    react_native_post_install(
+#      installer,
+#      # Set `mac_catalyst_enabled` to `true` in order to apply patches
+#      # necessary for Mac Catalyst builds
+#      :mac_catalyst_enabled => false
+#    )
+#    installer.pods_project.build_configurations.each do |config|
+#        config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+#      end
+#    __apply_Xcode_12_5_M1_post_install_workaround(installer)
+#  end
 end
