--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-toast-message": "^2.1.6",
+    "react-native-webview": "^13.6.3",
     "react-redux": "^8.0.5",
     "redux-thunk": "^2.4.2",
     "rn-country-picker": "^1.0.1"
